Fix Some Changes